--- a/31_flex_box/style.css
+++ b/31_flex_box/style.css
@@ -18,7 +18,7 @@ body {
 .content .navArea {
     display: flex;
     justify-content: flex-end;
-    margin-left: 15px;
+    margin-right: 85px;
     padding: 15px;
 }
 
@@ -108,4 +108,5 @@ body {
 .rigthContent .socilMedia a {
     color: #575757;
     margin-left: 30px;
+
 }
